tests/baselines/reference/tsxStatelessFunctionComponentsWithTypeArguments4.errors.txt
tests/cases/conformance/jsx/file.tsx(9,15): error TS2741: Property 'b' is missing in type '{ a: number; }' but required in type '{ b: unknown; a: number; }'.
tests/cases/conformance/jsx/file.tsx(10,15): error TS2322: Type 'T & { ignore-prop: true; }' is not assignable to type 'IntrinsicAttributes & { b: unknown; a: unknown; }'.
  Property 'a' is missing in type '{ b: number; } & { ignore-prop: true; }' but required in type '{ b: unknown; a: unknown; }'.


==== tests/cases/conformance/jsx/file.tsx (2 errors) ====
    import React = require('react')
    
    declare function OverloadComponent<U>(): JSX.Element;
    declare function OverloadComponent<U>(attr: {b: U, a: string, "ignore-prop": boolean}): JSX.Element;
    declare function OverloadComponent<T, U>(attr: {b: U, a: T}): JSX.Element;
    
    // Error
    function Baz<T extends {b: number}, U extends {a: boolean, b:string}>(arg1: T, arg2: U) {
        let a0 = <OverloadComponent a={arg1.b}/>
                  ~~~~~~~~~~~~~~~~~
!!! error TS2741: Property 'b' is missing in type '{ {|a|0|}: number; }' but required in type '{ {|b|1|}: unknown; {|a|2|}: number; }'.
!!! related TS2728 tests/cases/conformance/jsx/file.tsx:5:49: 'b' is declared here.
!!! annotated symbol 0 tests/cases/conformance/jsx/file.tsx:9:33
!!! annotated symbol 1 tests/cases/conformance/jsx/file.tsx:5:49
!!! annotated symbol 2 tests/cases/conformance/jsx/file.tsx:5:55
        let a2 = <OverloadComponent {...arg1} ignore-prop />  // missing a
                  ~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|T|0|} & { {|ignore-prop|1|}: true; }' is not assignable to type '{|IntrinsicAttributes|2|} & { {|b|3|}: unknown; {|a|4|}: unknown; }'.
!!! error TS2322:   Property 'a' is missing in type '{ {|b|5|}: number; } & { {|ignore-prop|6|}: true; }' but required in type '{ {|b|7|}: unknown; {|a|8|}: unknown; }'.
!!! related TS2728 tests/cases/conformance/jsx/file.tsx:5:55: 'a' is declared here.
!!! annotated symbol 0 tests/cases/conformance/jsx/file.tsx:8:14
!!! annotated symbol 1 tests/cases/conformance/jsx/file.tsx:10:43
!!! annotated symbol 2 /.lib/react.d.ts:2367:15
!!! annotated symbol 3 tests/cases/conformance/jsx/file.tsx:5:49
!!! annotated symbol 4 tests/cases/conformance/jsx/file.tsx:5:55
!!! annotated symbol 5 tests/cases/conformance/jsx/file.tsx:8:25
!!! annotated symbol 6 tests/cases/conformance/jsx/file.tsx:10:43
!!! annotated symbol 7 tests/cases/conformance/jsx/file.tsx:5:49
!!! annotated symbol 8 tests/cases/conformance/jsx/file.tsx:5:55
    }